--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <div class="container">
       <h1>Task Tracker</h1>
       <ul id="tasks">
-        <li>Task 1</li>
+        <li>Task 1.1</li>
         <li>Task 2</li>
         <li>Task 3</li>
       </ul>
     </div>
 
     <script src="script.js"></script>
+    <p>small change.</p>
   </body>
 </html>
